# imx_mcunet

./: readme.md
imx6ullApp/: .clanged  .gitignore  CMakeLists.txt  readme.md
imx6ullApp/.cache/clangd/index/: IModuleInterface.h.3A0AD092E2FDFE9C.idx  main.cpp.DD75A49A1AD54154.idx  mainwindow.cpp.A9D92264BADFF340.idx  mainwindow.h.6A11B6403BFBECA4.idx  ov5640_module.cpp.F8594B813EEAFB46.idx  ov5640_module.h.9928381E15BBF05A.idx  v4l2_driver.cpp.33D901AEA0616A94.idx  v4l2_driver.h.0C77D1AFA7D80738.idx  video_widget.cpp.43E3674B59869EC6.idx  video_widget.h.8DDA8094CCE240AE.idx
imx6ullApp/cmake/: arm-qt-toolchain.cmake
imx6ullApp/src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
imx6ullApp/src/modules/: CMakeLists.txt  IModuleInterface.h
imx6ullApp/src/modules/ov5640/: CMakeLists.txt  ov5640_module.cpp  ov5640_module.h  readme.md  v4l2_driver.cpp  v4l2_driver.h  video_widget.cpp  video_widget.h
